fix game cards layout and spacing

--- a/src/components/GameSmartsoft/styles.module.scss
+++ b/src/components/GameSmartsoft/styles.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/all';
 
 .gamesContainer {
-  padding: 30px 0;
+  padding: 0;
 
   @media (max-width: $screen-xs) {
     padding: 0;
@@ -17,6 +17,7 @@
   font-size: 24px;
   font-weight: 700;
   padding-bottom: 20px;
+  margin-top: 40px;
 
   @media (max-width: $screen-lg) {
     padding: 20px;
@@ -67,8 +68,8 @@
 .games {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   width: 100%;
+  gap: 15px;
 
   @media (max-width: $screen-lg) {
     padding: 0;
@@ -76,17 +77,15 @@
 
   @media (max-width: $screen-xs) {
     //flex-direction: column;
-    row-gap: 10px;
+    gap: 10px;
   }
 
   .wrapper {
     position: relative;
-    height: 150px;
+    height: 148px;
     overflow: hidden;
     border-radius: 20px;
-    width: 150px;
-    // margin-right: 10px;
-    margin-bottom: 20px;
+    width: 148px;
 
     @media (max-width: $screen-sm) {
       width: 45%;
