--- a/src/screens/Home/styles.module.scss
+++ b/src/screens/Home/styles.module.scss
@@ -17,7 +17,7 @@
   width: 100%;
 
   @media (min-width: $screen-lg) {
-    max-width: 1340px;
+    max-width: 1300px;
   }
 }
 
